--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,15 @@
 spring.application.name=inventory
 server.port=8082
-# MySQL config
+## MySQL config
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3316/inventory_service
 spring.datasource.username=root
 spring.datasource.password=mysql
 spring.jpa.hibernate.ddl-auto=none
+## Swagger config
+springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.swagger-ui.enabled=true
+springdoc.api-docs.enabled=true
+springdoc.api-docs.path=/api-docs
+springdoc.packagesToScan=com.example.microservices.inventory.controller
+springdoc.pathsToMatch=/**
