--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,13 @@
-spring.application.name=inventory
+spring.application.name=inventory-service
 server.port=8082
+
 ## MySQL config
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3316/inventory_service
 spring.datasource.username=root
 spring.datasource.password=mysql
 spring.jpa.hibernate.ddl-auto=none
+
 ## Swagger config
 springdoc.swagger-ui.path=/swagger-ui.html
 springdoc.swagger-ui.enabled=true
@@ -13,3 +15,13 @@ springdoc.api-docs.enabled=true
 springdoc.api-docs.path=/api-docs
 springdoc.packagesToScan=com.example.microservices.inventory.controller
 springdoc.pathsToMatch=/**
+
+## Observation Managment
+management.endpoints.web.exposure.include=health, info, metrics, prometheus
+management.endpoint.health.show-details=always
+management.metrics.distribution.percentiles-histogram.http.server.requests=true
+management.observations.key-values.application=inventory-service
+management.tracing.sampling.probability=1.0
+
+## Logging Loki URL
+loki.url=http://localhost:3100/loki/api/v1/push
